--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>MySlides</title>
+        <title>My Slides</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,9 +11,11 @@
     </head>
     <body>
 
-        <h1>Hello there </h1>
-        <!-- build:js scripts/main.js -->
+        <div id="wrapper">
+
+        </div>
+
+
         <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
-        <!-- endbuild -->
 </body>
 </html>
