--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet'>
 
     </head>
     <body>
