use global variety to store slides text

--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,12 @@
         <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet'>
 
     </head>
-    <body>
+    <body onselectstart="return false">
 
-        <div class="slides">
+        <div class="slides"></div>
 
-        </div>
-
+        <!-- Add Your Slides here -->
+        <script src="scripts/slides.js"></script>
 
         <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
 </body>
