move slides.js to root of Project

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
         <div class="slides"></div>
 
         <!-- Add Your Slides here -->
-        <script src="scripts/slides.js"></script>
+        <script src="slides.js"></script>
 
         <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
 </body>
